# QA_diag_bot

./: .gitignore  Dialogflow.py  README.md  TG_bot.py  bots_logger.py  fit_bot.py  main.py  private_key.json  pyproject.toml  requirements.txt  tg_bot.py  vk_bot.py  vk_bot_from devman.py  vk_echobot_devman.py
